# XenSynth

./: .gitattributes  .gitignore  HEX_KEYBOARD_NOTICE.md  README.md  TUNING_JSON.md  gradle.properties  pubspec.yaml  settings.gradle.kts
.build/LaunchScreen.storyboardc/: 01J-lp-oVM-view-Ze5-6b-2t3.nib
.build/derived-data/: info.plist
.build/derived-data/ModuleCache.noindex/: Accessibility-5S0BISS91Y8SQKXAORARUE542.pcm  CFNetwork-91F5W03FMEC8JLI1G9NIV03RB.pcm  CoreAudio-3D1JFF9LCMRGJ986BKV9WCW41.pcm  CoreAudioTypes-1MIRKK61FZARPCKV571ISVNUU.pcm  CoreData-59ZSTTLCMD9BAFCP0NS3GH4W5.pcm  CoreFoundation-7WGZ6PMW3K5CFXVOU8KKNUL73.pcm  CoreGraphics-RTMHNWWQ8I35DUZVJ4PAPW9F.pcm  CoreImage-AP87477I5UCLPQFMLDC3CXLQX.pcm  CoreMIDI-1B2R0PY82A1A5PQFB4U1X31LM.pcm  CoreMedia-740LI534W7FXL5F0JIXVZ5OT9.pcm  CoreText-32YJ2KJ3T6CCDIU6BIE0WZ7BC.pcm  CoreTransferable-9K2YPK8XEMIY4509HTSUM4D5C.pcm  CoreVideo-CSXXI6MW4R5QIJNJ2FQM74IPM.pcm  Darwin-7FF72OS42RKRAZH09C7EJBK3K.pcm  DataDetection-9EL0ITIQS9KN918ZKHKI9HQKT.pcm  Dispatch-3YOITQ4M5PUVQXTN59WCTHRKH.pcm  FileProvider-F2R8CN3OEEOS9UHOBC77QWVDM.pcm  IOSurface-8GECWGFFJO18QI2GQC3RW8CAY.pcm  ImageIO-DW0QHJ6PUDFLUUGBJIXGEF1CA.pcm  MachO-3WKTSXEF7YJN82AHQUDU9EW0Q.pcm  Metal-C9LR0IOKDCIMIHLZKB2L9RF93.pcm  OSLog-DYYY2OTW1QK38ZH1FD6S4EY59.pcm  ObjectiveC-1WQS0B5Y8Z6042WWEF07JJKKF.pcm  OpenGLES-XIPKF6Q3NZYPY3HCYTYSWKAV.pcm  QuartzCore-83TIU30W54WZYYGWRNXYUH2UD.pcm  Security-2X0J7TC5X6XL24L1OO0SBKTQH.pcm  Session.modulevalidation  Spatial-EG45ONFN80SY8PSPIXDJMU8FR.pcm  SwiftUI-ADF1R3COI8V52XJ9T267KKOYG.pcm  SwiftUICore-ENSBSWXOL0GNH8A3S0KJXMXVM.pcm  Symbols-88X2MB8W472X6SMZDP3SMEM1B.pcm  UIUtilities-9MHMWWJ5G2SCSC0XCU6I6B6ZV.pcm  UniformTypeIdentifiers-BVX5CV1RK9HB4E73O49Z84NZU.pcm  UserNotifications-EVNH7JZO3Y51N7A7L6XO5S1XU.pcm  XPC-2I3TCEZO6SO9SGNFNEN5ADW6D.pcm  _Builtin_intrinsics-AHSTLA5UF5TTW09U76EWFO5P0.pcm  _Builtin_inttypes-9KV21UQ30I3C3P2PA9CED6TOV.pcm  _Builtin_limits-OSC2TKUA5VTN72ACGE14GGD9.pcm  _Builtin_stdatomic-5KWAB1HPV5E6KVM0FFISFQ9J4.pcm  _Builtin_stdint-7DDRXPN592ILT1CT6ZZCCNGCH.pcm  (+10 more)
.build/derived-data/SDKStatCaches.noindex/: iphoneos26.5-23F81a-688ef53f1462e2c8f657fdc38a81448f32daed1954a7d5dd0789fcaf2a9bb78b.sdkstatcache
.build/derived-data/SourcePackages/: workspace-state.json
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  XenAudioEngine.cpp
app/src/main/cpp/fluidsynth/lib/glib-2.0/include/: glibconfig.h
app/src/main/cpp/parselib/src/main/cpp/wav/: AudioEncoding.h  WavStreamReader.cpp
app/src/main/cpp/soundfont/: README.md
assets/scores/: demo_26edo.midx
gradle/: libs.versions.toml
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
ios/Runner/Platform/: FluidSynthEngine.swift  MIDIKeyboardController.swift  MsczToMidx.swift  NativeScoreModels.swift  PitchAnalysis.swift  PitchRecognitionManager.swift  PitchRecording.swift  ScorePlaybackController.swift  XenAudioSession.swift  XenSynthPlatformBridge.swift
ios/RunnerTests/: RunnerTests.swift
lib/: main.dart
lib/app/: xensynth_controller.dart  xensynth_settings.dart
lib/core/: hex_keyboard.dart  microphone_take.dart  midi_parser.dart  score.dart  tuning.dart
lib/platform/: native_bridge.dart
lib/ui/: app_palette.dart  xensynth_screen.dart
lib/ui/hex/: hex_keyboard_view.dart
lib/ui/spatial/: spatial_waterfall_view.dart
lib/ui/waterfall/: edo_scale_guide.dart  waterfall_particle_system.dart  waterfall_view.dart
lib/ui/widgets/: control_toolbar.dart  settings_panel.dart
test/: widget_test.dart
test/app/: xensynth_controller_document_test.dart  xensynth_controller_latency_test.dart  xensynth_controller_offset_test.dart  xensynth_controller_pitch_recognition_test.dart  xensynth_controller_pitch_snap_test.dart  xensynth_controller_seek_gesture_test.dart  xensynth_settings_test.dart
test/core/: hex_keyboard_test.dart  midi_parser_test.dart  tuning_test.dart
test/ui/: control_toolbar_test.dart  hex_keyboard_view_test.dart  settings_panel_test.dart  spatial_waterfall_view_test.dart  xensynth_screen_test.dart
tools/: SoundFontPackager.java
(+233 files in other folders)
